Fix problem: inline code underscore not aligned

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -192,7 +192,7 @@
 .post-content code {
     font-family: "Source Code Pro", "HYZhengYuan", monospace;
     margin: auto 4px;
-    padding: 4px 6px;
+    padding: 3px 6px;
     /* font-size: 0.78em; */
     font-size: 16px;
     line-height: 1.6;
